# probeai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  data.dvc  environment.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  test_training.py
.dvc/: config
.github/workflows/: cml.yaml  docker-image.yml  docker.yml  tests.yml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: file_renamer.ipynb  model.onnx  tester.ipynb  wandb.ipynb
probeai/: __init__.py  predict_model.py  train.py  train_model.py
probeai/config/: defaults.yaml
probeai/config/model_conf/: default.yaml
probeai/config/train_conf/: default.yaml
probeai/data/: make_dataset.py
probeai/models/: model.py
probeai/visualizations/: visualize.py
reports/: README.md  classification_report.txt  report.py
tests/: __init__.py  test_data.py  test_model.py
